# hakai-ckan-records-conversion

./: README.md  pyproject.toml
hakai_ckan_records_conversion/: __main__.py  citation_cff.py  ckan.py  convention_cff.py  erddap.py
sync/: action.yaml
tests/: generate_local.py  test_hakai_ckan.py  test_record.yaml
